# tictactoe-local

./: .gitignore  Makefile  openapi-schema.json  pnpm-lock.yaml
.github/workflows/: ci.yml  coverage.yml
backend/: coverage.json  pyproject.toml
backend/app/api/: __init__.py
backend/app/api/routers/: game.py  stats.py
backend/app/logic/: game.py  stats.py
backend/app/models/: game.py  stats.py
backend/scripts/: generate_openapi.py
backend/tests/: test_failing.py  test_game_api.py  test_game_logic.py  test_stats_api.py  test_stats_logic.py
frontend/: eslint.config.js  index.html  openapi-ts.config.ts  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/client/: index.ts  sdk.gen.ts  types.gen.ts
frontend/src/components/: AnalysisPage.tsx  BoardDisplay.tsx  BoardInput.tsx  CountGamesPage.tsx  Layout.tsx  NextStatesPage.tsx  PlayPage.tsx
